--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -52,6 +52,7 @@
                                     <constraint firstAttribute="height" constant="150" id="cPC-uf-vzF"/>
                                 </constraints>
                                 <connections>
+                                    <action selector="toumeiButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aIa-b8-bUq"/>
                                     <segue destination="8si-ks-rVP" kind="show" id="6vP-EY-Qzr"/>
                                 </connections>
                             </button>
@@ -102,6 +103,9 @@
                     </view>
                     <connections>
                         <outlet property="imageView" destination="pSZ-GN-wfh" id="a1F-Fl-TbO"/>
+                        <outlet property="onNext" destination="rrf-lB-LpZ" id="qez-We-iA3"/>
+                        <outlet property="onPrev" destination="FtD-NR-L8H" id="RZp-7d-aWm"/>
+                        <outlet property="startButton" destination="Mwb-cw-PIX" id="UKG-wz-q0D"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -134,12 +138,6 @@
                                     <segue destination="CzE-nN-b3f" kind="unwind" unwindAction="unwind:" id="fGG-Hs-FTI"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FKW-st-I7t">
-                                <rect key="frame" x="180" y="482" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -151,7 +149,6 @@
                     </view>
                     <connections>
                         <outlet property="img2" destination="54F-MO-f1I" id="orp-x3-4TY"/>
-                        <outlet property="resuViewLabel" destination="FKW-st-I7t" id="Uit-0G-NKR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ycb-mo-bqZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
